--- a/style.css
+++ b/style.css
@@ -9,4 +9,32 @@ body{
     height: 100vh;
     overflow: hidden;
     background: #e9e9e9;
+    cursor: url(cursor.png), auto;
+}
+nav{
+    display: flex;
+    justify-content: center;
+}
+ul{
+    display: inline;
+    list-style: none;
+}
+ul li{
+    display: inline-block;
+    padding: 20px;
+    cursor: pointer;
+    font-size: 20px;
+}
+.content{
+    position: absolute;
+    width: 33%;
+    left: 10%;
+    top: 30vh;
+}
+.content h1{
+    font-size: 60px;
+
+}
+hr{
+  margin-top: 30px;  
 }
